# PTZ-Tracker-Person-YOLO

./: CMakeLists.txt  README.md  deploy.bat
src/: CaptureEngine.cpp  CaptureEngine.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  PTZController.cpp  PTZController.h  PTZPanel.cpp  PTZPanel.h  VideoWidget.cpp  VideoWidget.h  YOLODetector.cpp  YOLODetector.h  main.cpp
